day2/ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Template generated by rain

Parameters:
  Env:
    Type: String
    Default: test
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: 'Name of an existing EC2 key pair for SSH access to the EC2 instance.'
  EC2AMIID:
    Type: String
    Default: ami-032d6db78f84e8bf5
  EC2InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro, t3.micro]

Resources:
  EC2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      ImageId: !Ref EC2AMIID
      InstanceType: !Ref EC2InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      SubnetId:
        Fn::ImportValue:
          !Sub ${Env}-PublicSubnet1a
      Tags:
        - Key: Name
          Value: !Sub '${Env}-Instance'

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Web Security Group
      GroupName: web-secgroup
      VpcId:
        Fn::ImportValue:
          !Sub ${Env}-VpcId
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
      Tags:
        - Key: Name
          Value: !Sub '${Env}-web-secgroup'

Outputs:
  WebSecurityGroup:
    Value: !Ref WebSecurityGroup
    Export:
      Name: !Sub ${Env}-WebSecurityGroup
